--- a/scss/generic.scss
+++ b/scss/generic.scss
@@ -84,7 +84,8 @@
   font-weight: 500;
 }
 
-.fw-md-normal {
+.fw-md-normal,
+.dark .fw-md-normal {
   @include media-breakpoint-up(md) {
     font-weight: 400 !important;
   }
